Prevent word wrap in the middle of speaker name, event name and comment count JOINDIN-277

--- a/web/css/joindin.css
+++ b/web/css/joindin.css
@@ -390,3 +390,7 @@ form ul.errors {
 .search-results .talk .rating {
     float: right;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
